Se agrega SP de Paúl para la obtención de las referencias OXXO y Openpay

--- a/ApiAppV1/nlog.config
+++ b/ApiAppV1/nlog.config
@@ -6,7 +6,7 @@
   <targets>
     <!-- write logs to file  -->
     <target name="allfile" xsi:type="File"
-            fileName="c:\DemoLogs\nlog-all-${shortdate}.log"/>
+            fileName="c:\DemoLogs\ApiAppV1_${shortdate}.log"/>
   </targets>
 
   <!-- rules to map from logger name to target -->
